# vibedev

./: .npmignore  Cargo.toml  README.md  package.json
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.sh  common.sh  setup-plan.sh  test_security.sh  update-agent-context.sh
scripts/: postinstall.js
src/: ai_impact_analyzer.rs  analysis.rs  ascii_charts.rs  behavior_analyzer.rs  cache.rs  claude_config.rs  cli_output.rs  comprehensive_backup_analytics.rs  daemon.rs  discovery.rs  embedded_llm.rs  git_infographics.rs  history_sanitizer.rs  llm_chat.rs  main.rs  shell_analytics.rs  timeline.rs  timeline_png.rs  tui.rs  workflow_correlation.rs
